feat(doing better with purs): first time using purs

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
   <meta content="utf-8" http-equiv="encoding">
   <title>PureScript • Starter</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- <script src="./index.js"></script> -->
 </head>
 
 <body>
+
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-  <script src="./dist/esm2015/index.js"></script>
+
+  <!-- Production -->
+  <!-- <script src="./dist/esm2015/index.js"></script> -->
+
+  <!-- Development -->
 </body>
 </html>
